--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Rich was here!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Search here</title>
+</head>
+
+<body>
+    <header>
+        <form>
+            <input name="s" placeholder="search"/>
+            <button type="submit" style="display:none"></button>
+        </form>
+    </header>
+    <search-results></search-results>
+    <main style="display:block">
+        <h1>Search here</h1>
+        <p>some text goes here</p>
+        <script src="search.js" type="module"></script>
+    </main>
+</body>
+
+</html>
