limit of height of paragraph in search results

--- a/index.html
+++ b/index.html
@@ -17,7 +17,22 @@
     <search-results></search-results>
     <main style="display:block">
         <h1>Search here</h1>
-        <p>some text goes here</p>
+        <p>fdklgjfdklgjdsklfjglksjgklsjfdjgdklfsjglskdjglks;jklfdjglk;sjgsfdslkgjsdf;kgjdf;lkgs
+            gjkfdsjgkldsfjgjdfsklgjsfdklgjksdfjgsdfklgjkdfsglkfjdklgj 
+            djfhdsjkfhjkdsahfjkalsdhfsdahfsadkjfhsadjkfhsadjkfhasdjkfhjksdfsd 
+            kjdhfkjdhsfjsdlfjksdfakjl jdkhfskajdlhfasldhfasldjhfasjdklfhalsj
+            dkfjasdklfjsadkjfaskdlflajjhsdkjfhasdjhfasjdhfkjadsfkjdhfjkhdassdsljkfhskdjfjjdfshfjklsdhfkjhsfjfdsgjdfhgjdsfklghdfsjhgdsfjgdfsjgdfjkghfdsgldfsgsdfjlgjldfghdfsjhgsdlfghdsfhlghsdfjkhlh 
+            some text goes here and here
+            jdjksldhfjksdahfjksdahfjkasdhfjklsadhfjkasdhfjkasdhfjkdhsjkfhsdjkfhsjkdahfkjsdahfjksadhfkjh 
+            fdjkhfjkdshfkjasdhfkljasdhfkjasdhfkjsadhfkjsadhfjksadhfjkasdhfjksahdjkfhjkhjkdskjahfjksdhfkj
+            kldjfklasdjflkajsdflkasdfksadfjasdf;asdjfklsdajflksadjfklsadjflksjdalkfjsdlkfjaslkdlkjasdlkajflkasjfa
+            kjdsfkjsdjfasdjfkasjdfjlaksdjflksdjfj;lsadjfksdjflkasdjlfkjsadlkfjasdlkjflkdsjflksdjfklasjlkklasjsfjlkasd
+            djfajdshfkjsadhfasdfjasdjkfsdjafjkasdfdsakl;fjsdaflkasdjklfasdjklfjsakdljfkalsdfjsdalkfjsla;dkfjasdklfjsadkjfaskdlflajjhsdkjfhasdjhfasjdhfkjadsfkjdhfjkhdassdsljkfhskdjfjjdfshfjklsdhfkjhsfjfdsgjdfhgjdsfklghdfsjhgdsfjgdfsjgdfjkghfdsgldfsgsdfjlgjldfghdfsjhgsdlfghdsfhlghsdfjkhlhdfsdka;flajdasl;kjfklsadjflaksdjflkasdjflkdsj
+            dkfjsdlk;afjalksdjflkasd;jfakl;sjfkljdslkfjldskjflksad;fk;dsafjsdla;fjldskajf;
+            dk;fjadslk;fjkjdsafkl;dsajfdskla;jfksladjfskladjflkasdjfasdkjflskadjflksdjaklfjsdlkajfas;jdkhfskajdlhfasldhfasldjhfasjdklfhalsj
+            dfjksdahfdjksahfjksadlhfjasdkhfasdkjfhkjdshfjksadhfkjhasdkjfhskdjhfadslafhsdajkhf
+            fddsalkfjdsklajfasdkjfjaskdl;fjalksdjfkl;sjf;sjfkljdslkfjldskjflksad
+        </p>
         <script src="search.js" type="module"></script>
     </main>
 </body>
